# HTTPy

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  upload_server_standalone.py
src/upload_server/: __init__.py  server.py
tests/: test_server.py
